--- a/docs/_static/nature.css
+++ b/docs/_static/nature.css
@@ -15,8 +15,8 @@
 body {
     font-family: "Lato", sans-serif;
     font-size: 100%;
-    background-color: #eee;
-    color: #555;
+    background-color: #fff;
+    color: #ffffff;
     margin: 0;
     padding: 0;
 }
