--- a/docs/_static/alabaster.css
+++ b/docs/_static/alabaster.css
@@ -23,11 +23,11 @@ div.documentwrapper {
 }
 
 div.bodywrapper {
-    margin: 0 0 0 220px;
+    margin: 0 0 0 300px;
 }
 
 div.sphinxsidebar {
-    width: 220px;
+    width: 300px;
     font-size: 14px;
     line-height: 1.5;
 }
@@ -138,7 +138,7 @@ div.sphinxsidebar p {
 div.sphinxsidebar ul {
     margin: 10px 0;
     padding: 0;
-    color: #000;
+    color: #2b3340;
 }
 
 div.sphinxsidebar ul li.toctree-l1 > a {
